--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GOOGLE_API_KEY=AIzaSyAlHngFZ0FC0IFAWnkfTfnaJ_SlekSBbXU
+GOOGLE_API_KEY=MAke your own key from the link "https://ai.google.dev/gemini-api/docs/api-key"
